--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,9 +1,21 @@
 format_version: 1.1.0
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
-
 workflows:
   test:
     steps:
+    - script:
+        inputs:
+        - content: |-
+              #!/bin/bash
+              set -e
+              set -v
+              rm -rf ./_tmp
+    - git-clone:
+        run_if: true
+        inputs:
+        - repository_url: https://github.com/Itelios/bitrise-steps-git-tag
+        - branch: master
+        - clone_into_dir: ./_tmp
     - change-workdir:
         title: Switch working dir to test / _tmp dir
         description: |-
@@ -23,7 +35,8 @@ workflows:
           but the step would use the default value specified in the `step.yml`
           file if you would not specify another value.
         inputs:
-        - example_step_input: Example Step Input's value
+        - tag: test
+        - tag_message: "ceci est un test de message" 
 
 
   # ----------------------------------------------------------------
@@ -31,10 +44,10 @@ workflows:
   share-this-step:
     envs:
       # if you want to share this step into a StepLib
-      - MY_STEPLIB_REPO_FORK_GIT_URL:
-      - STEP_ID_IN_STEPLIB:
-      - STEP_GIT_VERION_TAG_TO_SHARE:
-      - STEP_GIT_CLONE_URL:
+      - MY_STEPLIB_REPO_FORK_GIT_URL: bitrise share start -c https://github.com/itelios/bitrise-steplib.git
+      - STEP_ID_IN_STEPLIB: "git-tag-step"
+      - STEP_GIT_VERION_TAG_TO_SHARE: 1.0.0
+      - STEP_GIT_CLONE_URL: https://github.com/Itelios/bitrise-steps-git-tag
     description: |-
       If this is the first time you try to share a Step you should
       first call: $ bitrise share
