--- a/bitrise.yml
+++ b/bitrise.yml
@@ -36,7 +36,7 @@ workflows:
           file if you would not specify another value.
         inputs:
         - tag: test
-        - tag_message: "ceci est un test de message" 
+        - tag_message: "that's was a test message" 
 
 
   # ----------------------------------------------------------------
