--- a/bitrise.yml
+++ b/bitrise.yml
@@ -44,8 +44,8 @@ workflows:
   share-this-step:
     envs:
       # if you want to share this step into a StepLib
-      - MY_STEPLIB_REPO_FORK_GIT_URL: bitrise share start -c https://github.com/itelios/bitrise-steplib.git
-      - STEP_ID_IN_STEPLIB: "git-tag-step"
+      - MY_STEPLIB_REPO_FORK_GIT_URL: https://github.com/itelios/bitrise-steplib.git
+      - STEP_ID_IN_STEPLIB: git-tag
       - STEP_GIT_VERION_TAG_TO_SHARE: 1.0.0
       - STEP_GIT_CLONE_URL: https://github.com/Itelios/bitrise-steps-git-tag
     description: |-
